--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.6.5
 jedi==0.18.0
 Jinja2==3.0.2
+joblib==1.1.0
 jsonschema==4.1.2
 jupyter-client==7.0.6
 jupyter-core==4.9.1
@@ -52,6 +53,7 @@ prometheus-client==0.12.0
 prompt-toolkit==3.0.21
 protobuf==3.19.1
 pyarrow==6.0.0
+pycountry==20.7.3
 pycparser==2.20
 pydeck==0.7.1
 Pygments==2.10.0
@@ -63,6 +65,8 @@ pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 pyzmq==22.3.0
 requests==2.26.0
+scikit-learn==0.22.1
+scipy==1.7.1
 Send2Trash==1.8.0
 six==1.16.0
 smmap==5.0.0
@@ -71,6 +75,7 @@ streamlit-lottie==0.0.2
 tenacity==8.0.1
 terminado==0.12.1
 testpath==0.5.0
+threadpoolctl==3.0.0
 toml==0.10.2
 toolz==0.11.1
 tornado==6.1
