--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,7 @@ pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 pyzmq==22.3.0
 requests==2.26.0
-scikit-learn==0.22.1
+scikit-learn==1.0
 scipy==1.7.1
 Send2Trash==1.8.0
 six==1.16.0
@@ -89,3 +89,4 @@ watchdog==2.1.6
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.2
+xgboost==1.2.1
